# marker-network-site-generator

./: .gitignore  Cargo.toml  document-template.html  folder-template.html  index-template.html  marker-site.json  shell.nix  style.css  update_starter.sh
src/: config.rs  generator.rs  lib.rs  main.rs  manifest.rs  theme.rs
themes/marker/: document.html  folder.html  index.html  style.css
