[package]
name = "marker_network_site_generator"
version = "0.2.0"
authors = ["David Rusu <davidrusu.me@gmail.com>"]
edition = "2021"

[dependencies]
rayon = "1.5.0"
handlebars = "3.5.4"
tokio = { version = "1", features = ["full"] }
lines-are-rusty = { git = "https://github.com/ax3l/lines-are-rusty.git", branch = "develop" }
remarkable-cloud-api = { git = "https://github.com/davidrusu/remarkable-rs", branch = "drusu/updates" }
structopt = "0.3.21"
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0"
zip = "0.5"
url = "2.2.1"
chrono = { version = "0.4", features = ["serde"] }
async-recursion = "0.3.2"
